--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>newProduct</title>
 </head>
 <body>
-
+    <div class="oneBlock">
+        <img src="588308.png" alt="onePicture">
+    </div>
+    <div class="twoBlock">
+        <!-- <input type="oneArr" id="oneArr">
+        <button id="buttonArr" class="buttonArrBlock" onclick=""></button> -->
+    </div>
 <script src="ExerciseOne.js"></script>
 </body>
 </html>
